--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head> 
- 
+ <link href="/jivosite/jivosite.css" rel="stylesheet" />
+
+<script src="/jivosite/jivosite.js" type="text/javascript"></script>
     <meta charset="utf-8">
 	<link rel="shortcut icon" href="LINK DO ICONE FAVICON">    
     <style type="text/css">
