--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head> 
- <link href="/jivosite/jivosite.css" rel="stylesheet" />
-
-<script src="/jivosite/jivosite.js" type="text/javascript"></script>
+<script src="//code.jivosite.com/widget/uYAhQQVft1" async></script>
     <meta charset="utf-8">
 	<link rel="shortcut icon" href="LINK DO ICONE FAVICON">    
     <style type="text/css">
