--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head> 
-<script src="//code.jivosite.com/widget/uYAhQQVft1" async></script>
+<link href="/jivosite/jivosite.css" rel="stylesheet" />
+<script src="/jivosite/jivosite.js" type="text/javascript"></script>
+
     <meta charset="utf-8">
 	<link rel="shortcut icon" href="LINK DO ICONE FAVICON">    
     <style type="text/css">
@@ -28,7 +30,7 @@
 
 </head>
 
-<a href="javascript:void(0)" onclick="jivo_api.open(); return false;"> Bate-papo </a>
+<a href="javascript:void(0)" onclick="jivo_api.open(); return false;"> Seu próprio botão </ a>
 
 <body>
 
