--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head> 
-<link href="https://siteoficial.github.io/libidgel-amostras-gratis/jivosite/jivosite.css" rel="stylesheet" />
-<script src="https://siteoficial.github.io/libidgel-amostras-gratis/jivosite/jivosite.js" type="text/javascript"></script>
+<link href="/jivosite/jivosite.css" rel="stylesheet" />
+
+<script src="/jivosite/jivosite.js" type="text/javascript"></script>
 
     <meta charset="utf-8">
 	<link rel="shortcut icon" href="LINK DO ICONE FAVICON">    
