--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head> 
-<link href="libidgel-amostras-gratis/jivosite/jivosite.css" rel="stylesheet" />
+<link href="jivosite/jivosite.css" rel="stylesheet" />
 
-<script src="libidgel-amostras-gratis/jivosite/jivosite.js" type="text/javascript"></script>
+<script src="jivosite/jivosite.js" type="text/javascript"></script>
 
     <meta charset="utf-8">
 	<link rel="shortcut icon" href="LINK DO ICONE FAVICON">    
