--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 
-<head> 
+<head>
+	<script src="//code.jivosite.com/widget/uYAhQQVft1" async></script>
 <link href="jivosite/jivosite.css" rel="stylesheet" />
 
 <script src="jivosite/jivosite.js" type="text/javascript"></script>
